// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OE - Search Form as pill renders correctly 1`] = `
<jest>
  <form
    class="bcl-search-form rounded"
  >
    <div
      class="bcl-search-form__group"
    >
      &lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
=======

&gt;&gt;&gt;&gt;&gt;&gt;&gt; 72a590a814eb193c247246f7b8a52246de4b8760





      <svg
        class="bcl-search-form__icon bi icon--xs"
      >
        <use
          xlink:href="/icons.svg#search"
        />
      </svg>
      <label
        class="form-label"
      >
        Search bar label
      </label>
      <input
        class="bcl-search-form__input ps-5 bcl-form-control form-control"
        placeholder="Search"
        type="search"
      />
    </div>
  </form>
</jest>
`;

exports[`OE - Search Form renders correctly 1`] = `
<jest>
  <form
    class="bcl-search-form"
  >
    <div
      class="bcl-search-form__group"
    >
      &lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
=======

&gt;&gt;&gt;&gt;&gt;&gt;&gt; 72a590a814eb193c247246f7b8a52246de4b8760





      <svg
        class="bcl-search-form__icon bi icon--xs"
      >
        <use
          xlink:href="/icons.svg#search"
        />
      </svg>
      <label
        class="form-label"
      >
        Search bar label
      </label>
      <input
        class="bcl-search-form__input ps-5 bcl-form-control form-control"
        placeholder="Search"
        type="search"
      />
    </div>
  </form>
</jest>
`;

exports[`OE - Search Form with icon renders correctly 1`] = `
<jest>
  <form
    class="bcl-search-form"
  >
    <div
      class="bcl-search-form__group"
    >
      &lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
=======

&gt;&gt;&gt;&gt;&gt;&gt;&gt; 72a590a814eb193c247246f7b8a52246de4b8760

  
  


      <svg
        class="bi icon--s icon--rotate-90"
      >
        <use
          xlink:href="/icons.svg#mouse"
        />
      </svg>
      <label
        class="form-label"
      >
        Search bar label
      </label>
      <input
        class="bcl-search-form__input ps-5 bcl-form-control form-control"
        placeholder="Search"
        type="search"
      />
    </div>
  </form>
</jest>
`;

exports[`OE - Search Form with submit renders correctly 1`] = `
<jest>
  <form
    class="bcl-search-form submittable"
  >
    <div
      class="bcl-search-form__group"
    >
      <label
        class="form-label"
      >
        Search bar label
      </label>
      <input
        class="bcl-search-form__input bcl-form-control form-control"
        placeholder="Search"
        type="search"
      />
      <button
        class="bcl-search-form__submit bcl-btn btn btn-primary btn-md"
        type="button"
      >
        <span
          class="visually-hidden"
        >
          Search
        </span>
        &lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
=======

&gt;&gt;&gt;&gt;&gt;&gt;&gt; 72a590a814eb193c247246f7b8a52246de4b8760


  


        <svg
          class="bi icon--fluid"
        >
          <use
            xlink:href="/icons.svg#search"
          />
        </svg>
      </button>
    </div>
  </form>
</jest>
`;
